--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,6 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin )
 
 set(SOURCE_FILES main.cpp pre-afgh-relic.c pre-afgh-relic.h)
-add_executable(relic_hom ${SOURCE_FILES})
+add_executable(pre-relic ${SOURCE_FILES})
 
-target_link_libraries(relic_hom ${RELIC_LOC})
+target_link_libraries(pre-relic ${RELIC_LOC})
