Rename python wrapper to 'pypre'

--- a/python-wrapper/Makefile
+++ b/python-wrapper/Makefile
@@ -4,4 +4,4 @@ build: pre_python.c setup.py ../pre/pre-afgh-relic.c
 	python3 setup.py build_ext --inplace
 
 clean:
-	rm -rf pre.*.so build/*
+	rm -rf pypre.*.so build/*
