Refactor python wrapper to new API

--- a/python-wrapper/Makefile
+++ b/python-wrapper/Makefile
@@ -1,6 +1,6 @@
 .PHONY: build clean
 
-build: pre_python.c setup.py ../pre/pre-afgh-relic.c
+build: pre_python.c setup.py
 	python3 setup.py build_ext --inplace
 
 clean:
