--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: C
 
 before_script:
   - bash scripts/install-relic-ubuntu.sh
+  - make && sudo make install
+  - make python && sudo make install-python
 
-script: make && make test
+script: make test && make test python
